Added back my Vim-styled window navigation controls.

--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -16,13 +16,16 @@ bind-key a send-key C-a
 bind r source-file ~/.tmux.conf \;\
   display-message '[tmux] Configuration reloaded.'
 
-# {{{1 Window Navigation
 # Again, when you immediately hit <Alt-Tab>, it typically cycles to the last
 # window you viewed (at least it does for me with KWin).
 bind-key C-l last-window
 
 # Oppa Vim-navigation Style! Seriously, this enables Vim-like pane navigation
 # (keep the prefix held for even more fun).
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # Even more awesome, break a pane into its own window.
 bind-key g break-pane -F '[tmux] Graduated into window #{window_index}.'
