--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,7 +9,7 @@
 # }}}
 
 # {{{1 General options
-#rKeep its noise to nearly nothing.
+# Keep its noise to nearly nothing.
 set -sgw quiet on
 
 # Set the maximum history limit.
