Updated window config.

--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -3,10 +3,10 @@
 set -gw window-status-activity-attr bold
 
 # Set the string for the current window.
-set -gw window-status-format "#[fg=colour255] #I:#W #[default]"
+set -gw window-status-format "#[fg=colour255] #[bold,fg=colour140]#I#[default] #W #[default]"
 
 # Set the string for the current window.
-set -gw window-status-current-format "#[bold,fg=colour255,bg=colour160] ✹ #I:#W  #[default]"
+set -gw window-status-current-format "#[fg=colour255,bg=colour160] ✹ #[bold]#I#[nobold] #W  #[default]"
 
 # Base index? NOT ZERO (breaks tmuxinator)
 #set -gw base-index 1
