--- a/home/.tmux/mouse.conf
+++ b/home/.tmux/mouse.conf
@@ -1,15 +1,15 @@
 # vim: set ft=tmux tw=80:
 # Render mouse information as UTF-8.
-set -gw mouse-utf8 off
+set -gw mouse-utf8 on
 
 # Enable full use of the mouse.
-set -gw mode-mouse off
+set -gw mode-mouse on
 
 # Use the mouse to select panes.
-set -gw mouse-select-pane off
+set -gw mouse-select-pane on
 
 # Use the mouse to select windows.
-set -gw mouse-select-window off
+set -gw mouse-select-window on
 
 # Use the mouse to resize panes (way more useful than you'd expect).
-set -gw mouse-resize-pane off
+set -gw mouse-resize-pane on
