[patch] Commented out two breaking configuration options.

--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -9,14 +9,14 @@ set -gw window-status-format "#[fg=colour255] #[bold,fg=colour140]#I#[default] #
 set -gw window-status-current-format "#[fg=colour255,bg=colour160] ✹ #[bold]#I#[nobold] #W  #[default]"
 
 # Base index? NOT ZERO (breaks tmuxinator)
-#set -gw base-index 1
-#set -gw pane-base-index 1
+set -gw base-index 1
+set -gw pane-base-index 1
 
 set -gw alternate-screen on
 
 # Renumber numbers and rename windows.
-set -gw renumber-window on
+#set -gw renumber-window on
 set -gw automatic-rename on
 
 # Drop the spacing between window status.
-set -gw window-status-separator '  '
+#set -gw window-status-separator '  '
