[wip] tmux: Patch up.

--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -3,9 +3,11 @@
 set -gw window-status-activity-attr bold
 
 # Set the string for the current window.
+# TODO Move this into a script.
 set -gw window-status-format "#[fg=colour255] #[bold,fg=colour140]#I#[default] #W #[default]"
 
 # Set the string for the current window.
+# TODO Move this into a script.
 set -gw window-status-current-format "#[fg=colour255,bg=colour160] ✹ #[bold]#I#[nobold] #W  #[default]"
 
 # Base index? NOT ZERO (breaks tmuxinator)
