--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -3,11 +3,7 @@
 # It's what you look at to check on things and when configured to the max, it
 # can *sometimes* be the reason why you go fullscreen on your terminal
 # sessions!
-# TODO: Using #{pane_current_path}, can we do something with git?
 
-# Update the status bar once every two seconds. Instead of doing it every
-# second drops CPU usage (not tmux itself but the commands run when it
-# refreshes).
 set -gw status-interval 1
 
 set -gw status-utf8 on
@@ -27,8 +23,10 @@ set -gw status-bg colour0
 set -gw status-fg colour255
 
 set -gw status-left-length 120
-set -gw status-left "#[bg=colour0,fg=colour255,bold] #S #[nobold] #[underscore]#T#[nounderscore] #[default]"
+set -gw status-left "#(jalcine-tmux-status --left)"
+set -gw status-left "#[bg=colour0,fg=colour255,bold] #S #[bg=colour255,fg=colour0] Online: #{online_status}#[nobg,nofg] #[nobold] #[underscore]#T#[nounderscore] #[default]"
 
 set -gw status-right-length 120
-set -gw status-right "#[bold,fg=colour27,bg=colour255] $USER#[fg=black]@#[fg=colour22]#(hostname) #[default]#[bold,bg=white,fg=black] #($HOME/.local/bin/bash-battery)#[nobold,nobg,nofg] #[fg=colour255,bg=colour27,bold] %d/%m/%g %T #[default]"
+set -gw status-right "#(jalcine-tmux-status --right)"
+set -gw status-right "#[bold,fg=colour27,bg=colour255] $USER#[fg=black]@#[fg=colour22]#(hostname) #[default]#[bold,bg=white,fg=black] Bat: #{battery_percentage}#[nobold,nobg,nofg] #[fg=colour255,bg=colour27,bold] %d/%m/%g %T #[default]"
 
