[wip] tmux: Update config.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -28,5 +28,5 @@ set -gw status-left "#[bg=colour0,fg=colour255,bold] #S #[bg=colour255,fg=colour
 
 set -gw status-right-length 120
 set -gw status-right "#(jalcine-tmux-status --right)"
-set -gw status-right "#[bold,fg=colour27,bg=colour255] $USER#[fg=black]@#[fg=colour22]#(hostname) #[default]#[bold,bg=white,fg=black] Bat: #{battery_percentage}#[nobold,nobg,nofg] #[fg=colour255,bg=colour27,bold] %d/%m/%g %T #[default]"
+set -gw status-right "#[bold,fg=colour27,bg=colour255]$USER#[fg=black]@#[fg=colour22]#(hostname) #[default]#[bold,bg=colour0,fg=black] Bat: #{battery_percentage}#[nobold,nobg,nofg] #[fg=colour255,bg=colour27,bold] %d/%m/%g %T #[default]"
 
