[wip] Update mouse support into shell script.

--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -46,22 +46,7 @@ bind-key b set status
 bind-key v set-window-option monitor-activity
 
 # {{{ Mouse Bindings
-# TODO Move all of this into a script
-# Toggle mouse on with <prefix>M
-#bind M run 'tmux-mouse --enable'
-#bind m run 'tmux-mouse --disable'
-bind M \
-  set -w mode-mouse on \;\
-  set -w mouse-resize-pane on \;\
-  set -w mouse-select-pane on \;\
-  set -w mouse-select-window on \;\
-  display-message "[tmux] Mouse mode activated for this window."
-
-# Toggle mouse off with <prefix>m
-bind m \
-  set -uw mode-mouse \;\
-  set -uw mouse-resize-pane \;\
-  set -uw mouse-select-pane \;\
-  set -uw mouse-select-window \;\
-  display-message "[tmux] Mouse mode deactivated for this window."
+# Toggle mouse on with <prefix>{M,m}
+bind M run 'tmux-mouse --enable'
+bind m run 'tmux-mouse --disable'
 # }}}
