--- a/home/.tmux/copy-and-paste.conf
+++ b/home/.tmux/copy-and-paste.conf
@@ -1,4 +1,4 @@
-# vim: set ft=vim tw=78
+# vim: set ft=tmux tw=78 :
 # Thanks, https://github.com/aaronbieber/dotfiles/blob/master/configs/tmux.conf#L37
 
 # Enter copy-mode for selection.
