Move status, fix tmux-mouse.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -9,13 +9,13 @@ set -gw status-interval 1
 set -gw status-utf8 on
 
 # Make it sit in the middle.
-set -gw status-justify right
-set -gw status-position top
+set -gw status-justify left
+set -gw status-position bottom
 
 set -gw monitor-activity on
 set -gw visual-activity off
 
-set -gw visual-bell off
+set -gw visual-bell on
 set -gw bell-action current
 set -gw bell-on-alert on
 
