Split out tpm config to separate file.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,14 +32,7 @@ source-file $HOME/.tmux/panes.conf
 source-file $HOME/.tmux/messages.conf
 source-file $HOME/.tmux/bindings.conf
 source-file $HOME/.tmux/copy-and-paste.conf
+source-file $HOME/.tmux/tpm.conf
 ## }}}
 
-# List of plugins
-# Supports `github_username/repo` or full git URLs
-set -g @tpm_plugins "             \
-  tmux-plugins/tpm                \
-  tmux-plugins/tmux-battery       \
-  tmux-plugins/tmux-online-status \
-"
 
-run-shell $HOME/.tmux/plugins/tpm/tpm
