Update tmux config.

--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -45,6 +45,9 @@ bind-key b set status
 # Toggle the activity listening.
 bind-key v set-window-option monitor-activity
 
+# Toggle sending to all panes.
+bind-key a set-window-option synchronize-panes
+
 # {{{ Mouse Bindings
 # Toggle mouse on with <prefix>{M,m}
 bind M run 'tmux-mouse --enable'
