--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -19,14 +19,11 @@ set -gw visual-bell on
 set -gw bell-action current
 set -gw bell-on-alert on
 
-set -gw status-bg colour0
-set -gw status-fg colour255
+set -gw status-bg black
+set -gw status-fg white
 
 set -gw status-left-length 120
-set -gw status-left "#(jalcine-tmux-status --left)"
-set -gw status-left "#[bg=colour0,fg=colour255,bold] #S #[bg=colour255,fg=colour0] Online: #{online_status}#[nobg,nofg] #[nobold] #[underscore]#T#[nounderscore] #[default]"
+set -gw status-left "#T"
 
 set -gw status-right-length 120
 set -gw status-right "#(jalcine-tmux-status --right)"
-set -gw status-right "#[bold,fg=colour27,bg=colour255] $USER#[fg=black]@#[fg=colour22]#(hostname) #[default]#[bold,bg=colour0,fg=black] Bat: #{battery_percentage}#[nobold,nobg,nofg] #[fg=colour255,bg=colour27,bold] %d/%m/%g %T #[default]"
-
