--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -3,10 +3,14 @@
 set -gw default-terminal "screen-256color"
 
 # Defines the string that'd be used for the parent terminal.
-set -gw set-titles-string "tmux ~ #S [#I:#P] ~ #W (#T)"
+set -gw set-titles-string "tmux ~ (#P.#I) #S ~ #W (#T)"
 
 # Enable the editing of titles.
 set -gw set-titles on
 
 # Enable clipboard support a la xterm.
 set -gw set-clipboard on
+
+# Update the following variables from the environment.
+set -gw update-environment \
+"DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY DBUS_SESSION_BUS_ADDRESS"
