--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -3,22 +3,20 @@
 set -gw window-status-activity-attr bold
 
 # Set the string for the current window.
-# TODO Move this into a script.
-set -gw window-status-format "#[fg=colour255] #[bold,fg=colour140]#I#[default] #W #[default]"
+set -gw window-status-format "#[fg=white] #[bold,fg=blue]#I#[default] #W #[default]"
 
 # Set the string for the current window.
-# TODO Move this into a script.
-set -gw window-status-current-format "#[fg=colour255,bg=colour160] ✹ #[bold]#I#[nobold] #W  #[default]"
+set -gw window-status-current-format "#[fg=white,bg=red] ✹ #[bold]#I#[nobold] #W  #[default]"
 
-# Base index? NOT ZERO (breaks tmuxinator)
+set -gw window-status-separator ' '
+
+# Make counting of panes start from 1; and recount them.
 set -gw base-index 1
 set -gw pane-base-index 1
+set -gw renumber-window on
 
+# Allow preservation of screen output.
 set -gw alternate-screen on
 
-# Renumber numbers and rename windows.
-#set -gw renumber-window on
+# Rename screens on-the-fly.
 set -gw automatic-rename on
-
-# Drop the spacing between window status.
-#set -gw window-status-separator '  '
