Use simpler tmux status.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -23,7 +23,7 @@ set -gw status-bg black
 set -gw status-fg white
 
 set -gw status-left-length 120
-set -gw status-left "#T"
+set -gw status-left "#[fg=white,bg=black] $USER@#H #[default]"
 
 set -gw status-right-length 120
-set -gw status-right "#(jalcine-tmux-status --right)"
+set -gw status-right "Net: #{online_status}- Bat: #{battery_percentage} - %d/%m/%g %T %P"
