--- a/home/.tmux/messages.conf
+++ b/home/.tmux/messages.conf
@@ -1,10 +1,4 @@
 # vim: set ft=tmux tw=78 :
-# Set the coloring of the messages.
-set -g message-attr bold
-#set -g message-fg colour16
-#set -g message-bg colour221
 
-# Set the coloring and setup for the command line.
-set -g message-command-attr bold
-#set -g message-command-bg colour221
-#set -g message-command-fg colour16
+set -g message-bg black
+set -g message-fg white
