--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -11,6 +11,6 @@ set -gw set-titles on
 # Enable clipboard support a la xterm.
 set -gw set-clipboard on
 
-# Update the following variables from the environment.
-set -gw update-environment \
-"DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY DBUS_SESSION_BUS_ADDRESS"
+ #Update the following variables from the environment.
+#set -gw update-environment \
+#"DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY DBUS_SESSION_BUS_ADDRESS"
