--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -25,5 +25,5 @@ set -gw status-fg white
 set -gw status-left-length 120
 set -gw status-left "#[fg=white,bg=black] $USER@#H #[default]"
 
-set -gw status-right-length 120
-set -gw status-right "Net: #{online_status}- Bat: #{battery_percentage} - %d/%m/%g %T"
+set -gw status-right-length 300
+set -gw status-right "Net: #{online_status} - Bat: #{battery_percentage} - %d/%m/%g %T #[default]"
