add session name to lstatus.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -9,7 +9,7 @@ set -gw status-interval 1
 set -gw status-utf8 on
 
 # Make it sit in the middle.
-set -gw status-justify left
+set -gw status-justify centre
 set -gw status-position bottom
 
 set -gw monitor-activity on
@@ -23,7 +23,7 @@ set -gw status-bg black
 set -gw status-fg white
 
 set -gw status-left-length 120
-set -gw status-left "#[fg=white,bg=black] $USER@#H #[default]"
+set -gw status-left "#[fg=white,bg=black] $USER@#H:#S #[default]"
 
 set -gw status-right-length 300
 set -gw status-right "Net: #{online_status} - Bat: #{battery_percentage} - %d/%m/%g %T #[default]"
