Update plugins, status and bindings.

--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -4,6 +4,12 @@
 set -g @tpm_plugins "             \
   tmux-plugins/tmux-battery       \
   tmux-plugins/tmux-online-status \
+  tmux-plugins/tmux-logging       \
+  tmux-plugins/tmux-yank          \
 "
+
+set -g @batt_charged_icon "charged"
+set -g @batt_charging_icon "charging"
+set -g @batt_discharging_icon "drain"
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
