--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -37,13 +37,13 @@ bind ` next-layout
 
 # Quickly split the window either vertically or horizontally. 
 bind-key t split-window -h
-bind-key y split-window -v
+bind-key v split-window -v
 
 # Toggle the use of status.
 bind-key b set status
 
 # Toggle the activity listening.
-bind-key v set-window-option monitor-activity
+bind-key V set-window-option monitor-activity
 
 # Toggle sending to all panes.
 bind-key a set-window-option synchronize-panes
