update tpm, status and bindings.

--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -40,7 +40,7 @@ bind-key t split-window -h
 bind-key v split-window -v
 
 # Toggle the use of status.
-bind-key b set status
+bind-key q set status
 
 # Toggle the activity listening.
 bind-key V set-window-option monitor-activity
