--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -6,6 +6,7 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-online-status \
   tmux-plugins/tmux-logging       \
   tmux-plugins/tmux-yank          \
+  tmux-plugins/tmux-cpu           \
 "
 
 set -g @batt_charged_icon "charged"
