--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -26,4 +26,4 @@ set -gw status-left-length 120
 set -gw status-left "#[fg=white,bg=black]$USER@#H:#S#[default]"
 
 set -gw status-right-length 300
-set -gw status-right "Net:#{online_status}- #{battery_icon}:#{battery_percentage} - %d/%m/%g %T #[default]"
+set -gw status-right "CPU: #{cpu_percentage} - Net:#{online_status}- #{battery_icon}:#{battery_percentage} - %d/%m/%g %T #[default]"
