--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,4 @@
-# vim: set ft=tmux tw=80 fdm=marker:
+# vim: set ft=tmux tw=80 fdm=marker nospell:
 
 # {{{1 Heading
 # @author Jacky Alcine <me@jalcine.me>
@@ -29,7 +29,9 @@ source-file $HOME/.tmux/panes.conf
 source-file $HOME/.tmux/messages.conf
 source-file $HOME/.tmux/bindings.conf
 source-file $HOME/.tmux/copy-and-paste.conf
+source-file $HOME/.tmux/jalcine.conf
 source-file $HOME/.tmux/tpm.conf
+source-file $HOME/.tmux.local.conf
 ## }}}
 
 
