--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -12,5 +12,9 @@ set -gw set-titles on
 set -gw set-clipboard on
 
  #Update the following variables from the environment.
-#set -gw update-environment \
-#"DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY DBUS_SESSION_BUS_ADDRESS"
+set -u update-environment
+set -ag update-environment DISPLAY
+set -ag update-environment WINDOWID
+set -ag update-environment "XAUTHORITY DBUS_SESSION_BUS_ADDRESS"
+set -ag update-environment "SSH_CONNECTION SSH_ASKPASS SSH_AUTH_SOCK"
+set -ag update-environment SSH_AGENT_PID
