update panes, status, window

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -9,7 +9,7 @@ set -gw status-interval 1
 set -gw status-utf8 on
 
 # Make it sit in the middle.
-set -gw status-justify left
+set -gw status-justify centre
 set -gw status-position bottom
 
 set -gw monitor-activity on
@@ -19,11 +19,11 @@ set -gw visual-bell on
 set -gw bell-action current
 set -gw bell-on-alert on
 
-set -gw status-bg black
-set -gw status-fg white
+set -gw status-bg colour233
+set -gw status-fg colour241
 
 set -gw status-left-length 120
-set -gw status-left "#[fg=white,bg=black]$USER@#H:#S#[default]"
+set -gw status-left "#[fg=colour241,bg=colour233] #S - %Y/%m/%d %T %Z#[default]"
 
 set -gw status-right-length 300
-set -gw status-right "CPU: #{cpu_percentage} - Net:#{online_status}- #{battery_icon}:#{battery_percentage} - %d/%m/%g %T #[default]"
+set -gw status-right "Net #{online_status}- Bat #{battery_percentage} #[bold,fg=colour249]$USER@#H#[default] #[default]"
