--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -1,13 +1,12 @@
 # vim: set ft=tmux :
 # Make a window with activity bold.
-set -gw window-status-activity-attr bold
+set -gw window-status-activity-style fg=colour254,underscore
 
 # Set the string for the current window.
-set -gw window-status-format "#[fg=white] #[bold,fg=blue]#I#[default] #W #[default]"
+set -gw window-status-format "#[fg=white] #[fg=colour175]#I #[default]#W#[default] "
 
 # Set the string for the current window.
-set -gw window-status-current-format "#[fg=white,bg=red] ✹ #[bold]#I#[nobold] #W  #[default]"
-
+set -gw window-status-current-format "#[fg=white,bg=colour124] ✹ #[bold]#I #[nobold]#W #[default]"
 set -gw window-status-separator ' '
 
 # Make counting of panes start from 1; and recount them.
