--- a/home/.tmux/panes.conf
+++ b/home/.tmux/panes.conf
@@ -1,6 +1,6 @@
 # vim: set ft=tmux tw=78 :
 # Define the coloring of the borders.
 set -gw pane-border-bg black
-set -gw pane-border-fg black
-set -gw pane-active-border-fg yellow
+set -gw pane-border-fg colour234
+set -gw pane-active-border-fg colour124
 set -gw pane-active-border-bg black
