--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -1,15 +1,14 @@
-# vim: set ft=tmux tw=78 wrap:
+# vim: set ft=tmux tw=0 sts=0 wrap:
 # If there's nothing more important in tmux, it's your freaking statusbar.
 # It's what you look at to check on things and when configured to the max, it
 # can *sometimes* be the reason why you go fullscreen on your terminal
 # sessions!
 
 set -gw status-interval 1
-
 set -gw status-utf8 on
 
 # Make it sit in the middle.
-set -gw status-justify centre
+set -gw status-justify left
 set -gw status-position bottom
 
 set -gw monitor-activity on
@@ -23,7 +22,7 @@ set -gw status-bg colour233
 set -gw status-fg colour241
 
 set -gw status-left-length 120
-set -gw status-left "#[fg=colour241,bg=colour233] #S - %Y/%m/%d %T %Z#[default]"
+set -gw status-left "#[fg=colour241,bg=colour233] #[underscore]#S#[nounderscore] - #[bold]%Y/%m/%d#[nobold] %T %Z#[default]"
 
 set -gw status-right-length 300
-set -gw status-right "Net #{online_status}- Bat #{battery_percentage} #[bold,fg=colour249]$USER@#H#[default] #[default]"
+set -gw status-right "(#{online_status}#[fg=colour255,bold]NET#[default])(#{battery_percentage} #[fg=colour255,bold]BAT#[default])(#{cpu_percentage} #[bold,fg=colour255]CPU#[default]) #[bold,fg=colour249]$USER#[default]@#[underscore]#H#[default] #[default]"
