b/c tmux likes this option.

--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -12,7 +12,7 @@ set -gw set-titles on
 set -gw set-clipboard on
 
  #Update the following variables from the environment.
-set -u update-environment
+set -ug update-environment
 set -ag update-environment DISPLAY
 set -ag update-environment WINDOWID
 set -ag update-environment "XAUTHORITY DBUS_SESSION_BUS_ADDRESS"
