--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -3,10 +3,10 @@
 set -gw window-status-activity-style fg=colour254,underscore
 
 # Set the string for the current window.
-set -gw window-status-format "#[fg=white] #[fg=colour175]#I #[default]#W#[default] "
+set -gw window-status-format "#[fg=white] #[fg=colour153]#I #[default]#W#[default] "
 
 # Set the string for the current window.
-set -gw window-status-current-format "#[fg=white,bg=colour124] ✹ #[bold]#I #[nobold]#W #[default]"
+set -gw window-status-current-format "#[fg=colour15,bg=colour064] ✹ #[bold]#I #[nobold]#W #[default]"
 set -gw window-status-separator ' '
 
 # Make counting of panes start from 1; and recount them.
