update status conf.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -18,11 +18,11 @@ set -gw visual-bell on
 set -gw bell-action current
 set -gw bell-on-alert on
 
-set -gw status-bg colour234
-set -gw status-fg colour241
+set -gw status-bg black
+set -gw status-fg white
 
 set -gw status-left-length 120
-set -gw status-left "#[fg=colour241,bg=colour234] #[underscore]#S#[nounderscore] - #[bold]%Y/%m/%d#[nobold] %T %Z#[default]"
+set -gw status-left "#[fg=colour241,bg=black] #[bold,underscore]#S#[nobold,nounderscore] - #[bold]%Y/%m/%d#[nobold] %T %Z#[default]"
 
 set -gw status-right-length 300
 set -gw status-right "(#{online_status}#[fg=colour255,bold]NET#[default])(#{battery_percentage} #[fg=colour255,bold]BAT#[default])(#{cpu_percentage} #[bold,fg=colour255]CPU#[default]) #[bold,fg=colour249]$USER#[default]@#[underscore]#H#[default] #[default]"
