--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -25,4 +25,4 @@ set -gw status-left-length 120
 set -gw status-left "#[fg=colour241,bg=black] #[bold,underscore]#S#[nobold,nounderscore] - #[bold]%Y/%m/%d#[nobold] %T %Z#[default]"
 
 set -gw status-right-length 300
-set -gw status-right "(#{online_status}#[fg=colour255,bold]NET#[default])(#{battery_percentage} #[fg=colour255,bold]BAT#[default])(#{cpu_percentage} #[bold,fg=colour255]CPU#[default]) #[bold,fg=colour249]$USER#[default]@#[underscore]#H#[default] #[default]"
+set -gw status-right "(#{online_status}#[fg=colour255,bold]NET#[default])(#{battery_percentage} #[fg=colour255,bold]BAT#[default])(#{cpu_percentage} #[bold,fg=colour255]CPU#[default]) #[bold,fg=colour241]$USER#[nobold]@#[underscore]#H#[default] #[default]"
