--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -11,9 +11,20 @@ set -gw set-titles on
 # Enable clipboard support a la xterm.
 set -gw set-clipboard on
 
- #Update the following variables from the environment.
+# Update the following variables from the environment.
 set -ag update-environment DISPLAY
 set -ag update-environment WINDOWID
-set -ag update-environment "XAUTHORITY DBUS_SESSION_BUS_ADDRESS"
-set -ag update-environment "SSH_CONNECTION SSH_ASKPASS SSH_AUTH_SOCK"
+set -ag update-environment XAUTHORITY
+set -ag update-environment DBUS_SESSION_BUS_ADDRESS
+
+# Handle SSH variable.s
+set -ag update-environment SSH_CONNECTION
+set -ag update-environment SSH_ASKPASS
+set -ag update-environment SSH_AUTH_SOCK
 set -ag update-environment SSH_AGENT_PID
+
+# Handle Konsole env options.
+set -ag update-environment KONSOLE_PROFILE_NAME
+set -ag update-environment KONSOLE_DBUS_WINDOW
+set -ag update-environment KONSOLE_DBUS_SERVICE
+set -ag update-environment KONSOLE_DBUS_SESSION
