--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -19,10 +19,10 @@ set -gw bell-action current
 set -gw bell-on-alert on
 
 set -gw status-bg black
-set -gw status-fg white
+set -gw status-fg default
 
 set -gw status-left-length 120
 set -gw status-left "#[fg=colour241,bg=black] #[bold,underscore]#S#[nobold,nounderscore] - #[bold]%Y/%m/%d#[nobold] %T %Z#[default]"
 
 set -gw status-right-length 300
-set -gw status-right "(#{online_status}#[fg=colour255,bold]NET#[default])(#{battery_percentage} #[fg=colour255,bold]BAT#[default])(#{cpu_percentage} #[bold,fg=colour255]CPU#[default]) #[bold,fg=colour241]$USER#[nobold]@#[underscore]#H#[default] #[default]"
+set -gw status-right "(#{online_status}#[fg=colour255,bold]NET#[default] #(iwgetid --raw))(#{battery_percentage} #(acpi | cut -f 5 -d ' ') #[fg=colour255,bold]BAT#[default])(#{cpu_percentage} #[bold,fg=colour255]CPU#[default]) #[bold,fg=colour241]$USER#[nobold]@#[underscore]#H#[default] #[default]"
