--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -1,10 +1,10 @@
 # vim: set ft=tmux :
 # Set the string for the current window.
-set -gw window-status-format "#[fg=white] #[fg=colour153]#I #[default]#W#[default] "
+set -gw window-status-format "#[fg=colour153] #I #[default]#W#[default] "
 set -gw window-status-separator ' '
 
 # Set the string for the current window.
-set -gw window-status-current-format "#[fg=colour15,bg=colour255] ✹ #[bold]#I #[nobold]#W #[default]"
+set -gw window-status-current-format "#[fg=colour0,bg=colour153] ✹ #[bold]#I #[nobold]#W #[default]"
 # Make a window with activity bold.
 set -gw window-status-activity-style fg=colour254,underscore
 
