--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -7,6 +7,9 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-logging       \
   tmux-plugins/tmux-yank          \
   tmux-plugins/tmux-cpu           \
+  tmux-plugins/tmux-urlview       \
+  tmux-plugins/tmux-resurrect     \
+  tmux-plugins/tmux-continuum     \
 "
 
 set -g @batt_charged_icon "charged"
