Update tmux plugins, xterm and pane options.

--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -15,5 +15,8 @@ set -g @tpm_plugins "             \
 set -g @batt_charged_icon "charged"
 set -g @batt_charging_icon "charging"
 set -g @batt_discharging_icon "drain"
+set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
