--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -3,7 +3,7 @@
 set -gw default-terminal "screen-256color"
 
 # Defines the string that'd be used for the parent terminal.
-set -gw set-titles-string "tmux ~ (#P.#I) #S ~ #W (#T)"
+set -gw set-titles-string "tmux(p:#P w:#I) s:#S - p:#W (#T)"
 
 # Enable the editing of titles.
 set -gw set-titles on
@@ -17,13 +17,8 @@ set -ag update-environment WINDOWID
 set -ag update-environment XAUTHORITY
 set -ag update-environment DBUS_SESSION_BUS_ADDRESS
 
-# Handle SSH variable.s
+# Handle SSH variables.
 set -ag update-environment SSH_CONNECTION
 set -ag update-environment SSH_ASKPASS
 set -ag update-environment SSH_AUTH_SOCK
 set -ag update-environment SSH_AGENT_PID
-
-# Handle Konsole env options.
-set -ag update-environment KONSOLE_DBUS_WINDOW
-set -ag update-environment KONSOLE_DBUS_SERVICE
-set -ag update-environment KONSOLE_DBUS_SESSION
