Use more fluid colors for xterm.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -18,11 +18,11 @@ set -gw visual-bell on
 set -gw bell-action current
 set -gw bell-on-alert on
 
-set -gw status-bg colour232
-set -gw status-fg colour255
+set -gw status-bg black
+set -gw status-fg white
 
-set -gw status-left-length 120
-set -gw status-left "#[fg=colour241,bg=colour232] #[bold,underscore]#S#[nobold,nounderscore] - #[bold]%Y/%m/%d#[nobold] %T %Z#[default]"
+set -gw status-left-length 80
+set -gw status-left "#S - %Y/%m/%d %T %Z"
 
-set -gw status-right-length 300
-set -gw status-right "(#{online_status}#[fg=colour255,bold]NET#[default] #(iwgetid --raw))(#{battery_percentage} #(acpi | cut -f 5 -d ' ') #[fg=colour255,bold]BAT#[default])(#{cpu_percentage} #[bold,fg=colour255]CPU#[default]) #[bold,fg=colour241]$USER#[nobold]@#[underscore]#H#[default] #[default]"
+set -gw status-right-length 80
+set -gw status-right "#[underscore]$USER#[default]@#[bold]#H#[default]"
