Use ascii friendly status for network.

--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -12,11 +12,13 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-continuum     \
 "
 
-set -g @batt_charged_icon "charged"
-set -g @batt_charging_icon "charging"
-set -g @batt_discharging_icon "drain"
+set -g @batt_charged_icon 'charged'
+set -g @batt_charging_icon 'charging'
+set -g @batt_discharging_icon 'drain'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
+set -g @online_icon 'online'
+set -g @offline_icon 'offline'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
