--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -25,4 +25,4 @@ set -gw status-left-length 80
 set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default]"
 
 set -gw status-right-length 80
-set -gw status-right "%Y/%m/%d #[underscore]%T#[default] #[bold]%Z#[default]"
+set -gw status-right "%Y/%m/%d #[underscore]%T#[default] #[bold]%Z#[default] #{online_status}"
