--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -22,7 +22,7 @@ set -gw status-bg black
 set -gw status-fg white
 
 set -gw status-left-length 80
-set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default]"
+set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | #W.#P"
 
 set -gw status-right-length 80
 set -gw status-right "%Y/%m/%d #[underscore]%T#[default] #[bold]%Z#[default] #{online_status}"
