Update tmux config.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -18,6 +18,9 @@ set -sgw aggressive-resize on
 # Drop response time.
 set -sgw escape-time 10
 
+# Update history size.
+set -sgw history-limit 16384
+
 # }}}
 
 # {{{1 Sourcing
