Restore last sessions in Vim.

--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -18,6 +18,7 @@ set -g @batt_discharging_icon 'drain'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-processes '"vim->vim +SLoad"'
 set -g @online_icon 'online'
 set -g @offline_icon 'offline'
 
