update all of the things.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,7 @@
 # vim: set ft=tmux tw=80 fdm=marker nospell:
 
 # {{{1 Heading
-# @author Jacky Alcine <me@jalcine.me>
+# @author Jacky Alciné <yo@jacky.wtf>
 #
 # This file represents my configuration options for tmux. Over time, there was
 # a thousand and one settings I wanted to use for this file. I had to split it
@@ -10,13 +10,13 @@
 
 # {{{1 General options
 # Keep its noise to nearly nothing.
-set -sgw quiet on
+set -asgw quiet on
 
 # Be quantum, change depending on who's looking.
-set -sgw aggressive-resize on
+set -asgw aggressive-resize on
 
 # Drop response time.
-set -sgw escape-time 10
+set -asgw escape-time 5
 
 # Update history size.
 set -sgw history-limit 16384
