--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -15,7 +15,7 @@ bind-key b send-key C-a
 # Allow for quick re-loading of the configuration.
 # TODO Should we attempt to resource the host's ENV?
 bind r source-file ~/.tmux.conf \;\
-  display-message '[tmux] Configuration reloaded.'
+  display-message '[😜  tmux] Configuration reloaded.'
 
 # Again, when you immediately hit <Alt-Tab>, it typically cycles to the last
 # window you viewed (at least it does for me with KWin).
@@ -29,7 +29,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # Even more awesome, break a pane into its own window.
-bind-key g break-pane -F '[tmux] Graduated into window #{window_index}.'
+bind-key g break-pane -F '[🎓  tmux] Graduated into window #{window_index}.'
 
 # Switch the layout from its current state to one of the pre-defined ones. Not
 # something I use often, but it comes in handy so it's a bit out-of-reach.
