--- a/home/.tmux/panes.conf
+++ b/home/.tmux/panes.conf
@@ -1,6 +1,6 @@
 # vim: set ft=tmux tw=78 :
 # Define the coloring of the borders.
-set -gw pane-border-bg colour233
-set -gw pane-border-fg colour240
-set -gw pane-active-border-fg colour75
-set -gw pane-active-border-bg colour233
+set -agw pane-border-bg colour0
+set -agw pane-border-fg colour7
+set -agw pane-active-border-fg colour131
+set -agw pane-active-border-bg colour0
