--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -14,15 +14,15 @@ set -gw status-position top
 set -gw monitor-activity on
 set -gw visual-activity on
 
-set -gw visual-bell on
-set -gw bell-action current
-set -gw bell-on-alert on
+set -agw visual-bell on
+set -agw bell-action current
+set -agw bell-on-alert on
 
-set -gw status-bg black
-set -gw status-fg white
+set -agw status-bg colour0
+set -agw status-fg colour7
 
 set -gw status-left-length 80
-set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | #W.#P"
+set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | #W.#P | CPU: #{cpu_icon} #{cpu_percentage}"
 
 set -gw status-right-length 80
 set -gw status-right "%Y/%m/%d #[underscore]%T#[default] #[bold]%Z#[default] #{online_status}"
