update tpm and panes.

--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -5,6 +5,8 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-battery       \
   tmux-plugins/tmux-online-status \
   tmux-plugins/tmux-logging       \
+  tmux-plugins/tmux-copycat       \
+  tmux-plugins/tmux-open          \
   tmux-plugins/tmux-yank          \
   tmux-plugins/tmux-cpu           \
   tmux-plugins/tmux-urlview       \
@@ -21,5 +23,6 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-processes '"vim->vim +SLoad"'
 set -g @online_icon 'online'
 set -g @offline_icon 'offline'
+set -g @continuum-restore 'on'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
