fix(tmux): Add and tweak.

--- a/home/.tmux/panes.conf
+++ b/home/.tmux/panes.conf
@@ -3,5 +3,5 @@
 
 set -agw pane-border-bg default
 set -agw pane-border-fg default
-set -agw pane-active-border-fg colour117
-set -agw pane-active-border-bg colour117
+set -agw pane-active-border-fg red
+set -agw pane-active-border-bg default
