--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -12,17 +12,19 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-urlview       \
   tmux-plugins/tmux-resurrect     \
   tmux-plugins/tmux-continuum     \
+  tmux-plugins/tmux-sensible      \
+  tmux-plugins/tmux-pain-control  \
 "
 
 set -g @batt_charged_icon 'charged'
 set -g @batt_charging_icon 'charging'
 set -g @batt_discharging_icon 'drain'
-set -g @resurrect-save-bash-history 'on'
-set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-save-bash-history 'off'
+set -g @resurrect-capture-pane-contents 'off'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-processes '"vim->vim +SLoad"'
 set -g @online_icon 'online'
 set -g @offline_icon 'offline'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
