Update status options for style.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -8,7 +8,7 @@ set -gw status-interval 2
 set -gw status-utf8 on
 
 # Make it sit in the middle.
-set -gw status-justify centre
+set -gw status-justify right
 set -gw status-position top
 
 set -gw monitor-activity on
@@ -18,8 +18,7 @@ set -agw visual-bell on
 set -agw bell-action current
 set -agw bell-on-alert on
 
-set -agw status-bg colour0
-set -agw status-fg colour7
+set -agw status-style bg=black,fg=grey
 
 set -gw status-left-length 80
 set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | #W.#P | CPU: #{cpu_icon} #{cpu_percentage}"
