--- a/home/.tmux/panes.conf
+++ b/home/.tmux/panes.conf
@@ -1,7 +1,5 @@
-# vim: set ft=tmux tw=78 :
+# vim: set ft=tmux tw=78 :e
 # Define the coloring of the borders.
 
-set -agw pane-border-bg default
-set -agw pane-border-fg default
-set -agw pane-active-border-fg colour117
-set -agw pane-active-border-bg colour117
+set -agw pane-border-style fg=black,bg=black
+set -agw pane-active-border-style fg=red,bg=black,blink
