--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -10,16 +10,16 @@
 
 # {{{1 General options
 # Keep its noise to nearly nothing.
-set -asgw quiet on
+set -sgw quiet on
 
 # Be quantum, change depending on who's looking.
-set -asgw aggressive-resize on
+set -sgw aggressive-resize on
 
 # Drop response time.
-set -asgw escape-time 5
+set -sgw escape-time 2
 
 # Update history size.
-set -sgw history-limit 16384
+set -sgw history-limit 4096
 
 # }}}
 
