--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -21,7 +21,7 @@ set -agw bell-on-alert on
 set -gw status-style "bg=black,fg=white"
 
 set -gw status-left-length 80
-set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | #W.#P | CPU: #{cpu_icon} #{cpu_percentage}"
+set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | CPU: #{cpu_icon} #{cpu_percentage}"
 
 set -gw status-right-length 80
 set -gw status-right "%Y/%m/%d #[underscore]%T#[default] #[bold]%Z#[default] #{online_status}"
