clean up panes and windows.

--- a/home/.tmux/panes.conf
+++ b/home/.tmux/panes.conf
@@ -1,5 +1,5 @@
 # vim: set ft=tmux tw=78 :e
 # Define the coloring of the borders.
 
-set -agw pane-border-style fg=black,bg=black
-set -agw pane-active-border-style fg=red,bg=black,blink
+set -agw pane-border-style fg=colour233,bg=black
+set -agw pane-active-border-style fg=colour33,bg=black
