--- a/home/.tmux/panes.conf
+++ b/home/.tmux/panes.conf
@@ -1,5 +1,5 @@
-# vim: set ft=tmux tw=78 :e
+# vim: set ft=tmux tw=78 :
 # Define the coloring of the borders.
 
-set -agw pane-border-style fg=colour233,bg=black
-set -agw pane-active-border-style fg=colour33,bg=black
+set -agw pane-border-style fg=colour233,bg=default
+set -agw pane-active-border-style fg=colour33,bg=default
