--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -1,27 +1,34 @@
-# vim: set ft=tmux tw=0 sts=0 wrap:
+# vim: set ft=tmux tw=0 sts=0 fdm=marker wrap:
 # If there's nothing more important in tmux, it's your freaking statusbar.
 # It's what you look at to check on things and when configured to the max, it
 # can *sometimes* be the reason why you go fullscreen on your terminal
 # sessions!
 
+# {{{ Feedback
 set -gw status-interval 2
 set -gw status-utf8 on
+# }}}
 
-# Make it sit in the middle.
+# {{{ Positioning
 set -gw status-justify right
 set -gw status-position bottom
+# }}}
 
+# {{{ Activity
 set -gw monitor-activity on
-set -gw visual-activity on
+set -gw visual-activity off
+set -gw visual-bell off
+set -gw visual-silence off
+set -gw bell-action other
+set -gw bell-on-alert on
+# }}}
 
-set -agw visual-bell on
-set -agw bell-action other
-set -agw bell-on-alert on
-
+# {{{ Styling
 set -gw status-style "bg=black,fg=white"
 
 set -gw status-left-length 80
 set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | CPU: #{cpu_icon} #{cpu_percentage}"
 
 set -gw status-right-length 80
-set -gw status-right "%Y/%m/%d #[underscore]%T#[default] #[bold]%Z#[default] #{online_status}"
+set -gw status-right "%Y.%m.#[bold]%d#[default] #[underscore]%T#[default] #[bold]%Z#[default] | #{online_status} | BAT: #{battery_percentage}"
+# }}}
