--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -19,12 +19,12 @@ set -g @tpm_plugins "             \
 set -g @batt_charged_icon 'charged'
 set -g @batt_charging_icon 'charging'
 set -g @batt_discharging_icon 'drain'
-set -g @resurrect-save-bash-history 'off'
-set -g @resurrect-capture-pane-contents 'off'
+set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-processes '"vim->vim +SLoad"'
 set -g @online_icon 'online'
 set -g @offline_icon 'offline'
-set -g @continuum-restore 'off'
+set -g @continuum-restore 'on'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
