--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -11,7 +11,7 @@ set -gw status-utf8 on
 
 # {{{ Positioning
 set -gw status-justify right
-set -gw status-position bottom
+set -gw status-position top
 # }}}
 
 # {{{ Activity
@@ -30,5 +30,5 @@ set -gw status-left-length 80
 set -gw status-left "#[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | CPU: #{cpu_icon} #{cpu_percentage}"
 
 set -gw status-right-length 80
-set -gw status-right "%Y.#[underscore]%m#[default].#[bold]%d#[default] #[underscore]%T#[default] #[bold]%Z#[default] | #{online_status} | BAT: #{battery_percentage} | Continuum: #{continuum_status}"
+set -gw status-right "%Y.#[underscore]%m#[default].#[bold]%d#[default] #[underscore]%T#[default] #[bold]%Z#[default]  	→  #{online_status}→  #{battery_icon} #{battery_percentage}"
 # }}}
