tweaked tmux setup, new plugins.

--- a/home/.tmux/mouse.conf
+++ b/home/.tmux/mouse.conf
@@ -2,5 +2,5 @@
 # Enable mouse mode.
 set -gw mouse on
 
-# Render mouse information as UTF-8.
-set -gw mouse-utf8 on
+# Prevent malformed outputs.
+set -gw mouse-utf8 off
