--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -14,17 +14,19 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-continuum     \
   tmux-plugins/tmux-sensible      \
   tmux-plugins/tmux-pain-control  \
+  tmux-plugins/tmux-prefix-highlight \
 "
 
-set -g @batt_charged_icon 'charged'
-set -g @batt_charging_icon 'charging'
-set -g @batt_discharging_icon 'drain'
+set -g @batt_charged_icon '#[fg=green]charged#[default]'
+set -g @batt_charging_icon '#[fg=yellow]charging#[default]'
+set -g @batt_discharging_icon '#[fg=red]drain#[default]'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-processes '"vim->vim +SLoad"'
-set -g @online_icon 'online'
-set -g @offline_icon 'offline'
+set -g @online_icon '#[fg=green]online#[default]'
+set -g @offline_icon '#[fg=red]offline#[default]'
 set -g @continuum-restore 'on'
+set -g @prefix_highlight_show_copy_mode 'on'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
