update status line.

--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -27,8 +27,8 @@ set -gw bell-on-alert on
 set -gw status-style "bg=black,fg=white"
 
 set -gw status-left-length 80
-set -gw status-left " #[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] | #{cpu_icon} #{cpu_percentage} "
+set -gw status-left " #[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] #{cpu_icon} #{cpu_percentage} |> "
 
 set -gw status-right-length 80
-set -gw status-right "#{prefix_highlight} %a %Y-%m-%d #[bold]%H:%M#[default] %Z | #{online_status} | #{battery_percentage} #{battery_icon} "
+set -gw status-right "<|#{prefix_highlight} %a %Y-%m-%d #[bold]%H:%M#[default] %Z -> #{online_status} -> #{battery_percentage} #{battery_icon} "
 # }}}
