chore(config): Update env.

--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -15,6 +15,7 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-sensible      \
   tmux-plugins/tmux-pain-control  \
   tmux-plugins/tmux-prefix-highlight \
+  tmux-plugins/tmux-net-speed \
 "
 
 set -g @batt_charged_icon '#[fg=green]charged#[default]'
@@ -28,5 +29,6 @@ set -g @online_icon '#[fg=green]online#[default]'
 set -g @offline_icon '#[fg=red]offline#[default]'
 set -g @continuum-restore 'on'
 set -g @prefix_highlight_show_copy_mode 'on'
+set -g @net_spped_inf 'wlp8s0'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
