--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -1,12 +1,12 @@
 # vim: set ft=tmux tw=78:
 # Give us the 256 of screen.
-set -gw default-terminal "screen-256color"
+set -sgw default-terminal "screen-256color"
 
 # Defines the string that'd be used for the parent terminal.
-set -gw set-titles-string "tmux(p:#P w:#I) s:#S - p:#W (#T)"
+set -sgw set-titles-string "tmux(p:#P w:#I) s:#S - p:#W (#T)"
 
 # Enable the editing of titles.
-set -gw set-titles on
+set -sgw set-titles on
 
 # Enable clipboard support a la xterm.
-set -gw set-clipboard on
+set -sgw set-clipboard on
