--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -6,11 +6,11 @@
 
 # {{{ Feedback
 set -gw status-interval 2
-set -gw status-utf8 on
+set -qgw status-utf8 on
 # }}}
 
 # {{{ Positioning
-set -gw status-justify left
+set -gw status-justify right
 set -gw status-position top
 # }}}
 
@@ -27,7 +27,7 @@ set -gw bell-on-alert on
 set -gw status-style "bg=black,fg=white"
 
 set -gw status-left-length 80
-set -gw status-left " #[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] #{cpu_icon} #{cpu_percentage} |> "
+set -gw status-left " #[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] #{cpu_icon} #{cpu_percentage} -> #{net_speed} |> "
 
 set -gw status-right-length 80
 set -gw status-right "<|#{prefix_highlight} %a %Y-%m-%d #[bold]%H:%M#[default] %Z -> #{online_status} -> #{battery_percentage} #{battery_icon} "
