--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -26,7 +26,7 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-processes '"vim->vim +SLoad"'
 set -g @online_icon '#[fg=green]online#[default]'
 set -g @offline_icon '#[fg=red]offline#[default]'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 set -g @prefix_highlight_show_copy_mode 'on'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
