--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -6,7 +6,7 @@ set -gw window-status-separator ' '
 # Set the string for the current window.
 set -gw window-status-current-format "#[fg=colour255,bg=colour24] ✹ #[bold]#I #[nobold]#W #[default]"
 # Make a window with activity bold.
-set -gw window-status-activity-style fg=colour11,underscore
+set -gw window-status-activity-style fg=colour11,blink
 
 # Make counting of panes start from 1; and recount them.
 set -gw base-index 1
