update panes, window.

--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -7,7 +7,7 @@ set -gw window-status-separator ' '
 set -gw window-status-current-format \
   "#[fg=colour255,bg=colour24] ✹ #[bold]#I #[nobold]#W #[default]"
 # Make a window with activity bold.
-set -gw window-status-activity-style fg=colour11,underline
+set -gw window-status-activity-style fg=colour11
 
 # Make counting of panes start from 1; and recount them.
 set -gw base-index 1
