--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -30,5 +30,5 @@ set -gw status-left-length 80
 set -gw status-left " #[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] #{cpu_icon} #{cpu_percentage} -> #{net_speed} |> "
 
 set -gw status-right-length 80
-set -gw status-right "<|#{prefix_highlight} %a %Y-%m-%d #[bold]%H:%M#[default] %Z -> #{online_status} -> #{battery_percentage} #{battery_icon} "
+set -gw status-right "<|#{prefix_highlight} %a %Y-%m-%d #[bold]%H:%M:%S#[default] %Z -> #{online_status} -> #{battery_percentage} #{battery_icon} "
 # }}}
