--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -18,9 +18,9 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-net-speed \
 "
 
-set -g @batt_charged_icon '#[fg=green]charged#[default]'
-set -g @batt_charging_icon '#[fg=yellow]charging#[default]'
-set -g @batt_discharging_icon '#[fg=red]drain#[default]'
+set -g @batt_charged_icon '#[fg=green]full#[default]'
+set -g @batt_charging_icon '#[fg=yellow,bold]sync#[default]'
+set -g @batt_discharging_icon '#[fg=red,bold]idle#[default]'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
