--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -16,6 +16,7 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-pain-control  \
   tmux-plugins/tmux-prefix-highlight \
   tmux-plugins/tmux-net-speed \
+  Morantron/tmux-fingers  \
 "
 
 set -g @batt_charged_icon '#[fg=green]full#[default]'
