--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -36,8 +36,8 @@ bind-key g break-pane -F '[🎓  tmux] Graduated into window #{window_index}.'
 bind ` next-layout
 
 # Quickly split the window either vertically or horizontally. 
-bind-key t split-window -h \; select-layout
-bind-key v split-window -v \; select-layout
+bind-key t split-window -h
+bind-key v split-window -v
 
 # Toggle the use of status.
 bind-key q set status
