--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -10,8 +10,8 @@ set -qgw status-utf8 on
 # }}}
 
 # {{{ Positioning
-set -gw status-justify right
-set -gw status-position top
+set -gw status-justify left
+set -gw status-position bottom
 # }}}
 
 # {{{ Activity
@@ -26,9 +26,9 @@ set -gw bell-on-alert on
 # {{{ Styling
 set -gw status-style "bg=black,fg=white"
 
-set -gw status-left-length 80
-set -gw status-left " #[bold]#S#[default]:#[underscore]$USER#[default]@#[fg=blue]#H#[default] #{cpu_icon} #{cpu_percentage} -> #{net_speed} |> "
+set -gw status-left-length 90
+set -gw status-left "#[bg=white,fg=black] ❒ #[bold]#S#[nobold]:#[underscore]$USER#[nounderscore]@#H #[default] »  "
 
-set -gw status-right-length 80
-set -gw status-right "<|#{prefix_highlight} %a %Y-%m-%d #[bold]%H:%M:%S#[default] %Z -> #{online_status} -> #{battery_percentage} #{battery_icon} "
+set -gw status-right-length 50
+set -gw status-right "« #{prefix_highlight}%Y.%m.%d #[bold]%H:%M:%S#[default] %Z « #{online_status} « #{battery_percentage} « #{battery_icon}"
 # }}}
