--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -1,11 +1,12 @@
 # vim: set ft=tmux :
 # Set the string for the current window.
-set -gw window-status-format "#[fg=colour153] #I #[default]#W#[default] "
+set -gw window-status-format "#[fg=colour153] #[default]#W#[default] "
 set -gw window-status-separator ' '
 
 # Set the string for the current window.
 set -gw window-status-current-format \
-  "#[fg=colour255,bg=colour24] ✹ #[bold]#I #[nobold]#W #[default]"
+  "#[fg=colour255,bg=colour24] ✪ #[bold]#I #[nobold,underscore]#W#[nounderscore] #[default]"
+
 # Make a window with activity bold.
 set -gw window-status-activity-style fg=colour11,bold
 
