--- a/home/.tmux/panes.conf
+++ b/home/.tmux/panes.conf
@@ -1,5 +1,5 @@
 # vim: set ft=tmux tw=78 :
 # Define the coloring of the borders.
 
-set -agw pane-border-style fg=colour16,bg=default
-set -agw pane-active-border-style fg=colour92,bg=default
+set -agw pane-border-style fg=black,bg=default
+set -agw pane-active-border-style fg=white,bg=default
