--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -15,7 +15,6 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-sensible      \
   tmux-plugins/tmux-pain-control  \
   tmux-plugins/tmux-prefix-highlight \
-  tmux-plugins/tmux-net-speed \
   Morantron/tmux-fingers  \
 "
 
@@ -23,13 +22,14 @@ set -g @batt_charged_icon '#[fg=green]full#[default]'
 set -g @batt_charging_icon '#[fg=yellow,bold]sync#[default]'
 set -g @batt_discharging_icon '#[fg=red,bold]idle#[default]'
 set -g @resurrect-save-bash-history 'on'
-set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-processes '"vim->vim +SLoad"'
-set -g @online_icon '#[fg=green]online#[default]'
-set -g @offline_icon '#[fg=red]offline#[default]'
-set -g @continuum-restore 'off'
+set -g @online_icon '#[fg=green]✔ on #[default]'
+set -g @offline_icon '#[fg=red,bold]off#[default]'
+set -g @continuum-restore 'on'
 set -g @prefix_highlight_show_copy_mode 'on'
-set -g @net_spped_inf 'wlp8s0'
+set -g @resurrect-capture-pane-contents 'on'
+set -ag @resurrect-processes '"~ssh" "~vagrant" "~docker-compose" "~docker"'
+set -ag @resurrect-processes '"~mk" "~make" "~mosh" "~weechat"'
+set -ag @resurrect-processes '"nvim->nvim +SLoad"'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
