--- a/home/.tmux/mouse.conf
+++ b/home/.tmux/mouse.conf
@@ -1,6 +1,7 @@
 # vim: set ft=tmux tw=80:
 # Enable mouse mode.
 set -gw mouse on
+set -gw mode-mouse copy-mode
 
 # Prevent malformed outputs.
 set -qgw mouse-utf8 on
