--- a/home/.tmux/status.conf
+++ b/home/.tmux/status.conf
@@ -30,5 +30,5 @@ set -gw status-left-length 90
 set -gw status-left "#[bg=white,fg=black] ❒ #[bold]#S#[nobold]:#[underscore]$USER#[nounderscore]@#H #[default] » "
 
 set -gw status-right-length 50
-set -gw status-right "« #{prefix_highlight}%Y.%m.%d #[bold]%H:%M:%S#[default] %Z « #{online_status} « #{battery_percentage} « #{battery_icon}"
+set -gw status-right "#{prefix_highlight}%Y.%m.%d #[bold]%H:%M:%S#[default] %Z « #{online_status} « #{battery_percentage} « #{battery_icon}"
 # }}}
