--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -18,16 +18,16 @@ set -g @tpm_plugins "             \
   Morantron/tmux-fingers  \
 "
 
-set -g @batt_charged_icon '#[fg=green]full#[default]'
-set -g @batt_charging_icon '#[fg=yellow,bold]sync#[default]'
-set -g @batt_discharging_icon '#[fg=red,bold]idle#[default]'
-set -g @resurrect-save-bash-history 'on'
-set -g @resurrect-strategy-nvim 'session'
-set -g @online_icon '#[fg=green]✔ on #[default]'
-set -g @offline_icon '#[fg=red,bold]off#[default]'
-set -g @continuum-restore 'on'
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @resurrect-capture-pane-contents 'on'
+set -ag @batt_charged_icon '#[fg=green]full#[default]'
+set -ag @batt_charging_icon '#[fg=yellow,bold]sync#[default]'
+set -ag @batt_discharging_icon '#[fg=red,bold]idle#[default]'
+set -ag @resurrect-save-bash-history 'on'
+set -ag @resurrect-strategy-nvim 'session'
+set -ag @online_icon '#[fg=green]✔ on #[default]'
+set -ag @offline_icon '#[fg=red,bold]off#[default]'
+set -ag @continuum-restore 'on'
+set -ag @prefix_highlight_show_copy_mode 'on'
+set -ag @resurrect-capture-pane-contents 'on'
 set -ag @resurrect-processes '"~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes '"~mk" "~make" "~mosh" "~weechat"'
 set -ag @resurrect-processes '"nvim->nvim +SLoad"'
