--- a/home/.tmux/window.conf
+++ b/home/.tmux/window.conf
@@ -5,7 +5,7 @@ set -gw window-status-separator ' '
 
 # Set the string for the current window.
 set -gw window-status-current-format \
-  "#[fg=colour255,bg=colour24] ✪ #[bold]#I #[nobold,underscore]#W#[nounderscore] #[default]"
+  "#[fg=colour255,bg=colour24] #[bold]#I #[nobold,underscore]#W#[nounderscore] #[default]"
 
 # Make a window with activity bold.
 set -gw window-status-activity-style fg=colour11,bold
