--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -16,6 +16,7 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-pain-control  \
   tmux-plugins/tmux-prefix-highlight \
   Morantron/tmux-fingers  \
+  arcticicestudio/nord-tmux \
 "
 
 set -ag @batt_charged_icon '#[fg=green]full#[default]'
