--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -11,14 +11,18 @@ set -gw set-titles on
 # Enable clipboard support a la xterm.
 set -gw set-clipboard on
 
-# Update the following variables from the environment.
+# I know, I know.
+set -g @shell-mode 'emacs'
+
+# Handle SSH variables.
 set -ag update-environment DISPLAY
 set -ag update-environment WINDOWID
 set -ag update-environment XAUTHORITY
 set -ag update-environment DBUS_SESSION_BUS_ADDRESS
-
-# Handle SSH variables.
 set -ag update-environment SSH_CONNECTION
 set -ag update-environment SSH_ASKPASS
 set -ag update-environment SSH_AUTH_SOCK
 set -ag update-environment SSH_AGENT_PID
+
+# Get the colors right.
+set -sga terminal-overrides ",xterm-256color:Tc"
