--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -20,8 +20,8 @@ set -sgw escape-time 10
 
 # }}}
 
-# {{{1 Sourcing
-source-file $HOME/.tmux/mouse.conf
+# {{{1 Configuration
+set -gw mouse-utf8 on
 source-file $HOME/.tmux/xterm.conf
 source-file $HOME/.tmux/status.conf
 source-file $HOME/.tmux/window.conf
