--- a/home/.tmux/xterm.conf
+++ b/home/.tmux/xterm.conf
@@ -3,7 +3,7 @@
 set -gw default-terminal "screen-256color"
 
 # Defines the string that'd be used for the parent terminal.
-set -gw set-titles-string "tmux(p:#P w:#I) s:#S - p:#W (#T)"
+set -gw set-titles-string "tmux(#P/#I) #S - #W (#T)"
 
 # Enable the editing of titles.
 set -gw set-titles on
